<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_main" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp">

        <!-- -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icono_logo"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:rotationX="1"
                android:layout_marginStart="15dp"
                android:text="Neat Idea Co"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient_login"/>

        <!-- -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            style="@style/Login_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginTop="40dp"
            android:hint="@string/login_hint_user"
            app:counterEnabled="false"
            app:placeholderText="@string/login_user"
            app:startIconDrawable="@drawable/icon_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/tilPassword"
            style="@style/Login_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/login_hint_password"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="@color/white"
            app:placeholderText="@string/login_password"
            app:startIconDrawable="@drawable/icon_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#1A1B26"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="10dp"
                android:text="o inicia sesión con"
                android:textColor="@color/white" />

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_google"
            android:drawableStart="@drawable/google"
            android:gravity="center_vertical|center_horizontal"
            android:paddingHorizontal="30dp"
            android:text="Google"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnPlayGames"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_google"
            android:drawableStart="@drawable/play_games"
            android:gravity="center_vertical|center_horizontal"
            android:paddingHorizontal="30dp"
            android:text="Play Juegos"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿Aún no eres miembro?"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/linkCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Crear una cuenta"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>